add dynamic routes to each project, JSON file  updated

--- a/pages/projects/projects.json
+++ b/pages/projects/projects.json
@@ -1,21 +1,24 @@
 {
     "data": [
         {
-            "name": "project name",
+            "id": 1,
+            "name": "project name 1",
             "source": "project soruce",
             "description": "project description",
             "Thecnologies": "Project thecnologies",
             "imgUrl": "https://cdn3.iconfinder.com/data/icons/online-states/150/Photos-1024.png"
         },
         {
-            "name": "project name",
+            "id": 2,
+            "name": "project name 2",
             "source": "project soruce",
             "description": "project description",
             "Thecnologies": "Project thecnologies",
             "imgUrl": "https://cdn3.iconfinder.com/data/icons/online-states/150/Photos-1024.png"
         },
         {
-            "name": "project name",
+            "id": 3,
+            "name": "project name 3",
             "source": "project soruce",
             "description": "project description",
             "Thecnologies": "Project thecnologies",
