--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "next": "12.1.4",
     "react": "18.0.0",
